crates/squawk/src/snapshots/squawk__config__test_config__load_cfg_full.snap
---
source: crates/squawk/src/config.rs
expression: "ConfigFile::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        ConfigFile {
            excluded_paths: [
                "example.sql",
            ],
            excluded_rules: [
                RequireConcurrentIndexCreation,
            ],
            included_rules: [],
            pg_version: Some(
                Version {
                    major: 19,
                    minor: Some(
                        1,
                    ),
                    patch: None,
                },
            ),
            assume_in_transaction: Some(
                true,
            ),
            upload_to_github: UploadToGitHubConfig {
                fail_on_violations: None,
                only_comment_on_violations: None,
            },
        },
    ),
)
