crates/squawk/src/snapshots/squawk__config__test_config__load_fail_on_violations.snap
---
source: crates/squawk/src/config.rs
expression: "ConfigFile::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        ConfigFile {
            excluded_paths: [],
            excluded_rules: [],
            included_rules: [],
            pg_version: None,
            assume_in_transaction: None,
            upload_to_github: UploadToGitHubConfig {
                fail_on_violations: Some(
                    true,
                ),
                only_comment_on_violations: None,
            },
        },
    ),
)
